# Video-Note-Extractor

./: README.md  app.py  config.py  main.py  models.py  pipeline.py  pyproject.toml  requirements.txt
data/: English_Leap_Podcast__Choosing_Peace_in_a_Noisy_World_20260304_233206.json  English_Leap_Podcast__Choosing_Peace_in_a_Noisy_World_20260304_233206.md  English_Leap_Podcast__Peace_as_a_Daily_Choice_20260304_233946.json  English_Leap_Podcast__Peace_as_a_Daily_Choice_20260304_233946.md  Iran_s_Four_Eras__From_Victim_to_Villain__20260305_171248.json  Iran_s_Four_Eras__From_Victim_to_Villain__20260305_171248.md  Israel_s_most_daring_Operation_20260305_013609.json  Israel_s_most_daring_Operation_20260305_013609.md  The_English_Leap_Podcast__Can_the_World_Live_in_Peace__20260304_234548.json  The_English_Leap_Podcast__Can_the_World_Live_in_Peace__20260304_234548.md  The_English_Leap_Podcast__Choosing_Peace_in_a_Noisy_World_20260304_233543.json  The_English_Leap_Podcast__Choosing_Peace_in_a_Noisy_World_20260304_233543.md  The_Unfolding_History_of_Iran__From_Victim_to_Villain__20260304_234938.json  The_Unfolding_History_of_Iran__From_Victim_to_Villain__20260304_234938.md
ingestion/: file_loader.py  local_video.py  youtube.py
llm/: claude_extractor.py  gemini_client.py  gemini_extractor.py  qa_engine.py
output/: formatter.py
processing/: chunker.py  embedder.py  vector_store.py
transcription/: whisper_engine.py
